--- a/machine_learning_vai_ser_cliente.ipynb
+++ b/machine_learning_vai_ser_cliente.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -378,7 +378,7 @@
        "[575 rows x 14 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -406,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -422,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -438,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -450,7 +450,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -461,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -473,7 +473,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -510,7 +510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -527,7 +527,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -550,7 +550,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -600,7 +600,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -626,7 +626,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -649,7 +649,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
@@ -681,7 +681,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -727,34 +727,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
-    "params = {\n",
-    "    'ccp_alpha': 0.0,\n",
-    "    'class_weight': None,\n",
-    "    'criterion': 'gini',\n",
-    "    'max_depth': 11,\n",
-    "    'max_features': 'sqrt',\n",
-    "    'max_leaf_nodes': None,\n",
-    "    'min_impurity_decrease': 0.0,\n",
-    "    'min_samples_leaf': 1,\n",
-    "    'min_samples_split': 2,\n",
-    "    'min_weight_fraction_leaf': 0.0,\n",
-    "    'monotonic_cst': None,\n",
-    "    'random_state': None,\n",
-    "    'splitter': 'best'\n",
-    "}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 42,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "tree_model = model_training('decision_tree', x_train, y_train, params)"
+    "tree_model = model_training('decision_tree', x_train, y_train)"
    ]
   },
   {
@@ -773,7 +750,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -782,11 +759,11 @@
      "text": [
       "              precision    recall  f1-score   support\n",
       "\n",
-      "         0.0       0.79      0.84      0.81       100\n",
-      "         1.0       0.86      0.81      0.84       124\n",
+      "         0.0       0.81      0.80      0.80       100\n",
+      "         1.0       0.84      0.85      0.84       124\n",
       "\n",
       "    accuracy                           0.83       224\n",
-      "   macro avg       0.82      0.83      0.82       224\n",
+      "   macro avg       0.82      0.82      0.82       224\n",
       "weighted avg       0.83      0.83      0.83       224\n",
       "\n"
      ]
@@ -805,7 +782,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
@@ -814,12 +791,12 @@
      "text": [
       "              precision    recall  f1-score   support\n",
       "\n",
-      "         0.0       0.97      0.91      0.94       347\n",
-      "         1.0       0.91      0.97      0.94       323\n",
+      "         0.0       0.91      0.88      0.90       347\n",
+      "         1.0       0.88      0.91      0.89       323\n",
       "\n",
-      "    accuracy                           0.94       670\n",
-      "   macro avg       0.94      0.94      0.94       670\n",
-      "weighted avg       0.94      0.94      0.94       670\n",
+      "    accuracy                           0.90       670\n",
+      "   macro avg       0.90      0.90      0.90       670\n",
+      "weighted avg       0.90      0.90      0.90       670\n",
       "\n"
      ]
     }
@@ -844,7 +821,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -867,7 +844,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
@@ -899,7 +876,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
@@ -938,7 +915,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
